--- a/front-pdjs/src/app/app.component.css
+++ b/front-pdjs/src/app/app.component.css
@@ -4,7 +4,7 @@
 
 .container {
   padding: 5px !important;
-  height: calc(100% - 80px) !important;
+   height: 700px !important; /* cette iny*/
 
 }
 
