--- a/front-pdjs/src/app/app.component.html
+++ b/front-pdjs/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- You can now use your library component in app.component.html -->
+<div class="container">
 <h1>
   {{ title }}
 </h1>
@@ -6,6 +7,11 @@
   <ng2-pdfjs-viewer
     pdfSrc="pdf-sample.pdf"
     (onBeforePrint)="beforePrint($event)"
-    (onCreatedSigningForm)="createdSigningForm($event)"
+    (onAfterPrint)="onPageSelected($event)"
+    viewerId="MyUniqueID"
+    (onDocumentLoad)="testPagesLoaded($event)"
+    (onSign)="onSign($event)"
   ></ng2-pdfjs-viewer>
 </div>
+</div>
+
